# hope-programming-c

./: .clang-format  .gdb_history  .gitignore  CMakeLists.txt  DartConfiguration.tcl  Doxyfile  Pipeline.cmake  README.md  build.sh  docker-compose.yaml  launcher.sh  qa.sh  run-clang-tidy.py  sonar-project.properties
.github/actions/building/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.c
data/: state_summary.json
include/: client.h  server.h
lib/libcjson/: CMakeLists.txt
lib/libcjsonhandler/: CMakeLists.txt
lib/libcjsonhandler/include/: cjson_handler.h
lib/libcjsonhandler/src/: cjson_handler.c
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: emergency_handler.h
lib/libdyn/src/: emergency_handler.c
lib/libdyn/tests/: CMakeLists.txt
lib/libsta/: CMakeLists.txt
lib/libsta/include/: alert_module.h  cjson_handler.h  comunication_handler.h  lib_handler.h  r_w_handler.h  server_req_handler.h  supplies_data_handler.h
lib/libsta/src/: alert_module.c  cjson_handler.c  comunication_handler.c  critical_handler.c  lib_handler.c  r_w_handler.c  server_req_handler.c  supplies_data_handler.c
lib/libsta/tests/unit/: test_unit_program.c
server/: CMakeLists.txt
server/include/: server.h
server/src/: server.c
sonarqube_data/data/es7/nodes/0/_state/: _1gx.cfe  _1gx.cfs  _1gx.si  _1jw.cfe  _1jw.cfs  _1jw.si  _5aq.cfe  _5aq.cfs  _5aq.si  _5d4.cfe  _5d4.cfs  _5d4.si  _5qg.cfe  _5qg.cfs  _5qg.si  _65b.cfe  _65b.cfs  _65b.si  _6h3.cfe  _6h3.cfs  _6h3.si  _6v4.cfe  _6v4.cfs  _6v4.si  _6zl.cfe  _6zl.cfs  _6zl.si  _906.cfe  _906.cfs  _906.si  _92i.cfe  _92i.cfs  _92i.si  _92i_2.liv  _92k.cfe  _92k.cfs  _92k.si  _92l.cfe  _92l.cfs  _92l.si  (+16 more)
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/0/_state/: state-2.st
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/0/index/: segments_2
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/0/translog/: translog-3.tlog  translog-4.tlog  translog-5.tlog
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/1/_state/: retention-leases-2.st  retention-leases-3.st  state-1.st
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/1/index/: segments_2
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/1/translog/: translog-3.tlog  translog-4.tlog  translog-5.tlog
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/2/_state/: state-1.st
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/2/index/: segments_2
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/2/translog/: translog-3.tlog  translog-4.tlog  translog-5.tlog
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/3/_state/: state-1.st
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/3/index/: segments_2
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/3/translog/: translog-3.tlog  translog-4.tlog  translog-5.tlog
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/4/_state/: retention-leases-4.st  state-3.st
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/4/index/: segments_2
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/4/translog/: translog-3.tlog  translog-4.tlog  translog-5.tlog
sonarqube_data/data/es7/nodes/0/indices/1k_IZ3fxR9Cjcvxuym_j-w/_state/: state-11.st  state-15.st  state-19.st
sonarqube_data/data/es7/nodes/0/indices/5GwlhfLQQS6rv-zBwGLyZQ/0/_state/: retention-leases-2.st  retention-leases-4.st  retention-leases-6.st  state-3.st
sonarqube_data/data/es7/nodes/0/indices/5GwlhfLQQS6rv-zBwGLyZQ/0/index/: _b.fdm  _b.fdt  _b.fdx  _b.fnm  _b.kdd  _b.kdi  _b.kdm  _b.si  _b_6.fnm  _b_6_Lucene80_0.dvd  _b_6_Lucene80_0.dvm  _b_Lucene80_0.dvd  _b_Lucene80_0.dvm  _b_Lucene84_0.doc  _b_Lucene84_0.tim  _b_Lucene84_0.tip  _b_Lucene84_0.tmd  _l.fdm  _l.fdt  _l.fdx  _l.fnm  _l.kdd  _l.kdi  _l.kdm  _l.si  _l_3.fnm  _l_3_Lucene80_0.dvd  _l_3_Lucene80_0.dvm  _l_Lucene80_0.dvd  _l_Lucene80_0.dvm  _l_Lucene84_0.doc  _l_Lucene84_0.tim  _l_Lucene84_0.tip  _l_Lucene84_0.tmd  _m.cfe  _m.cfs  _m.si  _n.cfe  _n.cfs  _n.si  (+16 more)
sonarqube_data/data/es7/nodes/0/indices/5GwlhfLQQS6rv-zBwGLyZQ/0/translog/: translog-4.tlog  translog-5.tlog  translog-6.tlog
sonarqube_data/data/es7/nodes/0/indices/5GwlhfLQQS6rv-zBwGLyZQ/_state/: state-4.st  state-6.st  state-8.st
sonarqube_data/data/es7/nodes/0/indices/6Yv18drpT5ympfb_aeCt5w/0/_state/: retention-leases-3.st  retention-leases-5.st  retention-leases-7.st  state-3.st
sonarqube_data/data/es7/nodes/0/indices/6Yv18drpT5ympfb_aeCt5w/0/index/: _0.cfe  _0.si  _l.cfe  _l.cfs  _l.si  _m.cfe  _m.si  _n.cfe  _n.cfs  _n.si  segments_4
sonarqube_data/data/es7/nodes/0/indices/6Yv18drpT5ympfb_aeCt5w/0/translog/: translog-5.tlog  translog-6.tlog  translog-7.tlog  translog.ckp
sonarqube_data/data/es7/nodes/0/indices/6Yv18drpT5ympfb_aeCt5w/1/_state/: retention-leases-3.st  retention-leases-5.st  retention-leases-7.st  state-1.st
sonarqube_data/data/es7/nodes/0/indices/6Yv18drpT5ympfb_aeCt5w/1/index/: _e.cfe  _e.cfs  _e.si  _l.fdm  _l.fdt  _l.fdx  _l.fnm  _l.kdd  _l.kdi  _l.kdm  _l.nvd  _l.nvm  _l.si  _l_Lucene80_0.dvd  _l_Lucene80_0.dvm  _l_Lucene84_0.doc  _m.cfe  (+7 more)
sonarqube_data/data/es7/nodes/0/indices/6Yv18drpT5ympfb_aeCt5w/_state/: state-11.st  state-15.st  state-7.st
sonarqube_data/data/es7/nodes/0/indices/IOw66DcCTxq0BOKxL2FsjA/_state/: state-10.st  state-15.st  state-20.st
sonarqube_data/data/es7/nodes/0/indices/NRsNcrupTyyWxQxEz2QNKg/_state/: state-10.st  state-6.st  state-8.st
sonarqube_data/data/es7/nodes/0/indices/wir6uv3ZR-qHDdcM2xrk_w/_state/: state-10.st  state-15.st  state-21.st
sonarqube_data/data/es7/nodes/0/indices/zz07qVIbSW-WrZcesKvQTg/_state/: state-10.st  state-15.st  state-21.st
sonarqube_data/data/web/deploy/plugins/: index.txt
src/: client.c  client_A.c  client_B.c  client_monitor.c  server.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c  tests.c
(+169 files in other folders)
